--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.5",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.3"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
